# pymoon

./: .gitignore  README.md  __init__.py  main.py  notes.md  pyproject.toml  setup.py
notebooks/: example_1.ipynb
notebooks_for_doc/: color.ipynb  intensity.ipynb  map_to_disk.ipynb  maps.ipynb  photometry.ipynb
pymoon/: __init__.py  config.py  geometry.py  loader.py  main.py  photometry.py  polt_utils.py  shadows.py  utils.py
